# django-admin-bulma

./: LICENSE  MANIFEST.in  README.rst  pyproject.toml
src/django_admin_bulma/: context_processors.py  default_settings.py
src/django_admin_bulma/static/admin/js/: nav_sidebar.js
src/django_admin_bulma/templates/admin/: actions.html  app_index.html  app_list.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  filter.html  index.html  login.html  nav_sidebar.html  search_form.html  submit_line.html
src/django_admin_bulma/templates/admin/includes/: fieldset.html
src/django_admin_bulma/templates/admin/widgets/: related_widget_wrapper.html
src/django_admin_bulma/templates/django_admin_bulma/: field.html  field_horizontal.html
src/django_admin_bulma/templatetags/: bulma_form.py
