[project]
name = "django_admin_bulma"
version = "0.1.0"
authors = [
    {name = "Augusto Men", email = "augustocmen@yahoo.com.br"},
]
description = "A Bulma theme for Django Admin"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "Django>=4.0"
]

[project.urls]
"Homepage" = "https://github.com/augustomen/django-admin-bulma"
"Bug Tracker" = "https://github.com/augustomen/django-admin-bulma/issues"
